# CloudDisk

./: CMakeLists.txt  README.md
TcpClient/: CMakeCache.txt  CMakeLists.txt  Makefile  MyServer.cpp  MyServer.h  MyTcpSocket.cpp  MyTcpSocket.h  cmake_install.cmake  main.cpp  mywidget.cpp  mywidget.h  open_db.cpp  open_db.h  pdu.cpp  pdu.h
TcpServer/: CMakeLists.txt  main.cpp  mywidget.cpp  mywidget.h  pdu.cpp  pdu.h
db/: cloud_disk.db  sql.txt
